--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "APP_PORT:8000"
+      - "$APP_PORT:8000"
     volumes:
       - ./app:/app
     environment:
