--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-pydantic>=2.4.2
-Jinja2>=2.10
+Flask>=3.0.2
+Flask-SQLAlchemy>=3.1.1
+SQLAlchemy>=2.0.25
+python-dotenv>=1.0.1
+Werkzeug>=3.0.1
+Jinja2>=3.1.3
+click>=8.1.7
+itsdangerous>=2.1.2
+MarkupSafe>=2.1.5
+gunicorn>=21.2.0
